After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 796623 - tsdemux: Ensure valid seqnum on segment events
tsdemux: Ensure valid seqnum on segment events
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-bad
unspecified
Other All
: Normal normal
: 1.15.1
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2018-06-19 03:07 UTC by Nicolas Dufresne (ndufresne)
Modified: 2018-06-19 04:58 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
tsdemux: Ensure valid seqnum on segment events (1.02 KB, patch)
2018-06-19 03:07 UTC, Nicolas Dufresne (ndufresne)
needs-work Details | Review
tsdemux: Don't set invalid seqnum on segment event (981 bytes, patch)
2018-06-19 04:54 UTC, Nicolas Dufresne (ndufresne)
committed Details | Review

Description Nicolas Dufresne (ndufresne) 2018-06-19 03:07:36 UTC
Please review this changes, I have blindly fixed a CRITICAL assertion, but would like a confirmation if this is the right thing to do or not.
Comment 1 Nicolas Dufresne (ndufresne) 2018-06-19 03:07:40 UTC
Created attachment 372717 [details] [review]
tsdemux: Ensure valid seqnum on segment events
Comment 2 Edward Hervey 2018-06-19 04:48:29 UTC
Review of attachment 372717 [details] [review]:

::: gst/mpegtsdemux/tsdemux.c
@@ +2483,2 @@
     demux->segment_event = gst_event_new_segment (&demux->segment);
+    gst_event_set_seqnum (demux->segment_event, seqnum);

no need to create a seqnum if the stored one is invalid. New events are always created with a valid seqnum.
Comment 3 Nicolas Dufresne (ndufresne) 2018-06-19 04:54:06 UTC
Created attachment 372718 [details] [review]
tsdemux: Don't set invalid seqnum on segment event
Comment 4 Edward Hervey 2018-06-19 04:57:22 UTC
Attachment 372718 [details] pushed as c052ae5 - tsdemux: Don't set invalid seqnum on segment event